addition of pictures

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 </main>
-
 <footer>
   <!-- Step 4 - Add a dynamic year to the footer using JS. -->
-  <p>Copyright © Rahman in <%= new Date().getFullYear() %>
+  <p>Copyright © Rahman in 
+    <%= new Date().getFullYear() %>
   </p>
 </footer>
 </body>
